--- a/ProjectJS/styles.css
+++ b/ProjectJS/styles.css
@@ -3,10 +3,12 @@ body {
     text-align: center;
 }
 #clock {
+    margin-top: 10%;
     font-size: 48px;
     margin-bottom: 20px;
 }
-#timer {
+#Date {
+    font-family: 'Courier New';
     font-size: 24px;
     margin-bottom: 20px;
 }
@@ -25,7 +27,7 @@ body {
 }
 #login-form {
     padding: 4%;
-    padding-bottom: 11%;
+    padding-bottom: 5%;
     color: blueviolet;
     background-color: #090943;
     max-width: 300px;
